--- a/cliente/src/app/components/event/event.component.html
+++ b/cliente/src/app/components/event/event.component.html
@@ -1,1 +1,15 @@
-<p>event works!</p>
+<div class="card mb-2">
+    <div class="card-header d-flex justify-content-between
+    aling-item-center">
+        <label for="">Nombre Evento: {{event.nombreE}}</label> 
+        <label for="">Descripción: {{event.descripcionE}}</label> 
+        <label for=""># de Participantes Inscritos: {{event.nParcticipantes}}</label>
+        <div>
+            <button class= "btn btn-primary">Show</button>
+            <!-- <button class= "btn btn-danger">Delete</button> -->
+        </div>
+    </div>
+    <!-- <div class="card-body " [hidden] = "task.hide">
+        {{event.descripcionE}}
+    </div> -->
+</div>
