--- a/cliente/src/app/components/partaker-form/partaker-form.component.html
+++ b/cliente/src/app/components/partaker-form/partaker-form.component.html
@@ -1,34 +1,36 @@
 <div class="card">
     <div class="card-body">
+        <h5 class="card-title">{{title}}</h5>
         <form action="">
             <div class="form-group">
                 <label for="pNombre">Pirmer nombre</label>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" name ="pNombre" [(ngModel)] = "partaker.pNombre">
             </div>
             <div class="form-group">
                 <label for="sNombre">Segundo nombre</label>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" name ="sNombre" [(ngModel)] = "partaker.sNombre">
             </div>
             <div class="form-group">
                 <label for="pApellido">Primer apellido</label>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" name ="pApellido" [(ngModel)] = "partaker.pApellido">
             </div>
             <div class="form-group">
                 <label for="sApellido">Segundo apellido</label>
-                <input type="text" class="form-control" >
+                <input type="text" class="form-control" name ="sApellido" [(ngModel)] = "partaker.sApellido">
             </div>
             <div class="form-group">
                 <label for="celualr">Celular</label>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" name ="celular" [(ngModel)] = "partaker.celular">
             </div>
             <div class="form-group">
                 <label for="evento">Evento al que asistirá</label>
-                <select class="form-control">
-                    <option value="{{event.idE}}" *ngFor = "let event of events">{{event.nombreE}}</option>
+                <select class="form-control" name = "eveId" [(ngModel)]="partaker.eveId">
+                    <option *ngFor = "let event of events" [value]="event.idE"
+                    >{{event.nombreE}}</option>
                 </select>
             </div>
             <br>
-            <button class="btn btn-primary btn-block">Enviar</button>
+            <button class="btn btn-primary btn-block" (click)="create()">Enviar</button>
         </form>
     </div>
 </div>
