--- a/cliente/src/app/components/event/event.component.html
+++ b/cliente/src/app/components/event/event.component.html
@@ -3,7 +3,7 @@
     aling-item-center">
         <label for="">Nombre Evento: {{event.nombreE}}</label> 
         <label for="">Descripción: {{event.descripcionE}}</label> 
-        <label for=""># de Participantes Inscritos: {{event.nParcticipantes}}</label>
+        <label for=""># de Participantes Inscritos: {{event.nParticipantes}}</label>
         <div>
             <button class= "btn btn-primary">Participantes Inscritos</button>
             <!-- <button class= "btn btn-danger">Delete</button> -->
